Initial commit & delete all unused file from previous project

--- a/src/sass/min.sass
+++ b/src/sass/min.sass
@@ -13,3 +13,10 @@ body
 #img-gallery
     border-radius: 10px
     filter: blur(1px)
+
+.active
+    color: #9f7aea
+
+.dot
+    font-size: 3rem
+    line-height: 0
