--- a/src/sass/_buttons.sass
+++ b/src/sass/_buttons.sass
@@ -1,9 +1,23 @@
-.btn-sm-primary
-    background: rgb(102,117,210)
-    background: linear-gradient(90deg, rgba(102,117,210,1) 0%, rgba(184,130,255,1) 70%, rgba(203,164,255,1) 100%)
-    @apply px-5 py-2 text-white rounded font-semibold text-sm
-
-.btn-sm-secondary
+.btn-primary
     border-color: #8b6bff
     color: #8b6bff
-    @apply px-5 py-2 rounded font-medium border text-sm
+    padding: 0.5rem 1.25rem
+    border: solid 1px
+    border-radius: 0.375rem
+
+.btn-primary:hover
+    background: rgb(102,117,210)
+    background: linear-gradient(90deg, rgba(102,117,210,1) 0%, rgba(184,130,255,1) 70%, rgba(203,164,255,1) 100%)
+    color: white
+
+.btn-header-primary
+    border-color: #8b6bff
+    color: #8b6bff
+    padding: 0.5rem 1.25rem
+    border: solid 1px
+    border-radius: 0.375rem
+
+.btn-header-primary:hover
+    background: rgb(102,117,210)
+    background: linear-gradient(90deg, rgba(102,117,210,1) 0%, rgba(184,130,255,1) 70%, rgba(203,164,255,1) 100%)
+    color: white
