adding button on focus style

--- a/src/sass/_buttons.sass
+++ b/src/sass/_buttons.sass
@@ -10,6 +10,9 @@
     background: linear-gradient(90deg, rgba(102,117,210,1) 0%, rgba(184,130,255,1) 70%, rgba(203,164,255,1) 100%)
     color: white
 
+.btn-primary:focus
+    outline: none
+
 .btn-header-primary
     border-color: #8b6bff
     color: #8b6bff
@@ -21,3 +24,6 @@
     background: rgb(102,117,210)
     background: linear-gradient(90deg, rgba(102,117,210,1) 0%, rgba(184,130,255,1) 70%, rgba(203,164,255,1) 100%)
     color: white
+
+.btn-header-primary:focus
+    outline: none
