adding -webkit-tap-highlight-color for css style

--- a/src/sass/min.sass
+++ b/src/sass/min.sass
@@ -6,6 +6,9 @@
 
 @tailwind utilities
 
+*
+    -webkit-tap-highlight-color: transparent
+
 body
     font-family: 'Poppins', sans-serif
     color: #222222
